--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head><title> Test Ynov</title></head>
 	<body>
-	 <h1>Mise à jour</h1>
+	 <h1> salut Mise à jour</h1>
 	</body>
 </html>
 
